# pokerbots-2022

./: .gitignore  README.md
analysis/: 2021_01_23_batch_analysis.ipynb  download_gamelogs.ipynb  infoset_analysis.py  infoset_convergence.py  infoset_functions.py  infoset_node_convergence.py  infoset_preflop.py  infoset_total_convergence.py  kmeans_experiment.py  preflop_equities.npy  read_logs.py  strategy_analysis.py
analysis/batch_analysis/: GC_Games.pickle
bots/: build_all.sh  sync_lib.sh  zip_bots.sh
bots/cpp_player/: CMakeLists.txt  build.sh  sync_lib.sh
bots/cpp_player/libs/: CMakeLists.txt
bots/cpp_player/libs/skeleton/: CMakeLists.txt
bots/cpp_player/src/: main.cpp  player.h  subgame.h
cfr_bot/: .dir-locals.el  CMakeLists.txt  binary.h  build.sh  build_multi.sh  cfr.h  compute_buckets.py  compute_equity.h  convert_equity_buckets.cpp  convert_infoset.cpp  define.h  eval_cfr.cpp  game.h  gametree.h  generate_allocs_equity_table.cpp  mccfr.cpp  multi_mccfr.cpp  multi_mccfr_kuhn.cpp  run_equity_calcs.cpp  test_game.cpp
cfr_bot/src/: cfr.cpp  define.cpp  game.cpp
eval7pp/: CMakeLists.txt  arrays.h  equity.h  eval7pp.h  evaluate.h  example.cpp
eval7pp/src/: arrays.cpp  equity.cpp  evaluate.cpp
log_analysis/: read_logs.py
refs/: half_poker.nb  videos.txt
